--- a/5/20/jscss/default.css
+++ b/5/20/jscss/default.css
@@ -1,6 +1,6 @@
 /*Download by http://www.codefans.net*/
 
-body{margin:0;padding:0;background:pink;font-size:12px;overflow:auto}#mainDiv{width:100%;height:100%}#loveHeart{float:left;width:670px;height:625px}#garden{width:100%;height:100%}#elapseClock{text-align:right;font-size:18px;margin-top:10px;margin-bottom:10px}#words{font-family:"sans-serif";width:505px;font-size:24px;color:#666}#messages{display:none}#elapseClock .digit{font-family:"digit";font-size:36px}#loveu{padding:5px;font-size:22px;margin-top:80px;margin-right:120px;text-align:right;display:none}#loveu .signature{margin-top:10px;font-size:20px;font-style:italic}#code{float:left;width:440px;height:120%;color:#333;font-family:"Consolas","Monaco","Bitstream Vera Sans Mono","Courier New","sans-serif";font-size:28px}#code .string{color:#2a36ff}#code .keyword{color:#7f0055;font-weight:bold}#code .placeholder{margin-left:15px}#code .space{margin-left:7px}#code .comments{color:#3f7f5f}#copyright{
+body{margin:0;padding:0;background:pink;font-size:12px;overflow:auto}#mainDiv{width:100%;height:100%}#loveHeart{float:bottom;width:670px;height:625px}#garden{width:100%;height:100%}#elapseClock{text-align:right;font-size:18px;margin-top:10px;margin-bottom:10px}#words{font-family:"sans-serif";width:505px;font-size:28px;color:#666}#messages{display:none}#elapseClock .digit{font-family:"digit";font-size:36px}#loveu{padding:5px;font-size:28px;margin-top:80px;text-align:center;display:none}#loveu .signature{margin-top:10px;font-size:20px;font-style:italic}#code{width:98%;margin:10px;color:#333;font-family:"Consolas","Monaco","Bitstream Vera Sans Mono","Courier New","sans-serif";font-size:36px}#code .string{color:#2a36ff}#code .keyword{color:#7f0055;font-weight:bold}#code .placeholder{margin-left:0px}#code .space{margin-left:7px}#code .comments{color:#3f7f5f}#copyright{
 
 	margin-top: 10px;
 
@@ -24,7 +24,11 @@ body {
 
 	padding: 10px;
 
-	background: lightpink url(http://static.tieba.baidu.com/tb/cms/frs/bg/bg_105_wrap2.jpg) no-repeat fixed center center;
+	background: pink url(images/2.jpg) no-repeat fixed center center;
+	/*background-color: pink;
+	background-image: url("images/2.jpg");*/
+	background-size: cover;
+    width: 100%;
 
 	margin-left: 0px;
 
