--- a/5/20/jscss/default.css
+++ b/5/20/jscss/default.css
@@ -27,7 +27,7 @@ body {
 	/*background: pink url("images/2.jpg") no-repeat fixed center center;*/
 	background-color: pink;
 	background-image: url("images/2.jpg");
-	background-repeat: repeat-y;
+	background-repeat: repeat;
 	background-attachment: fixed;
 	background-position: center center;
 	background-size: cover;
